API Spec for ConfigResource
