# core/src/main/java/io/confluent/kafka/schemaregistry/rest/resources/SubjectsResource.java
@@ -15,6 +15,10 @@
 
 package io.confluent.kafka.schemaregistry.rest.resources;
 
+import io.swagger.annotations.ApiOperation;
+import io.swagger.annotations.ApiParam;
+import io.swagger.annotations.ApiResponse;
+import io.swagger.annotations.ApiResponses;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -65,12 +69,21 @@ public class SubjectsResource {
 
   @POST
   @Path("/{subject}")
+  @ApiOperation(value = "Check if a schema has already been registered under the specified subject."
+      + " If so, this returns the schema string along with its globally unique identifier, its "
+      + "version under this subject and the subject name.")
+  @ApiResponses(value = {
+      @ApiResponse(code = 404, message = "Error code 40401 -- Subject not found\n"
+          + "Error code 40403 -- Schema not found"),
+      @ApiResponse(code = 500, message = "Internal server error", response = Schema.class),
+  })
   @PerformanceMetric("subjects.get-schema")
-  public void lookUpSchemaUnderSubject(final @Suspended AsyncResponse asyncResponse,
-                                       @PathParam("subject") String subject,
-                                       @QueryParam("deleted") boolean
-                                           lookupDeletedSchema,
-                                       @NotNull RegisterSchemaRequest request) {
+  public void lookUpSchemaUnderSubject(
+      final @Suspended AsyncResponse asyncResponse,
+      @ApiParam(value = "Subject under which the schema will be registered", required = true)
+        @PathParam("subject") String subject,
+      @QueryParam("deleted") boolean lookupDeletedSchema,
+      @NotNull RegisterSchemaRequest request) {
     // returns version if the schema exists. Otherwise returns 404
     Schema schema = new Schema(subject, 0, -1, request.getSchema());
     io.confluent.kafka.schemaregistry.client.rest.entities.Schema matchingSchema = null;
@@ -94,6 +107,9 @@ public class SubjectsResource {
 
   @GET
   @Valid
+  @ApiOperation(value = "Get a list of registered subjects.")
+  @ApiResponses(value = {
+      @ApiResponse(code = 500, message = "Error code 50001 -- Error in the backend datastore")})
   @PerformanceMetric("subjects.list")
   public Set<String> list() {
     try {
@@ -107,10 +123,19 @@ public class SubjectsResource {
 
   @DELETE
   @Path("/{subject}")
+  @ApiOperation(value = "Deletes the specified subject and its associated compatibility level if "
+      + "registered. It is recommended to use this API only when a topic needs to be recycled or "
+      + "in development environment.", response = Integer.class, responseContainer = "List")
+  @ApiResponses(value = {
+      @ApiResponse(code = 404, message = "Error code 40401 -- Subject not found"),
+      @ApiResponse(code = 500, message = "Error code 50001 -- Error in the backend datastore")
+  })
   @PerformanceMetric("subjects.delete-subject")
-  public void deleteSubject(final @Suspended AsyncResponse asyncResponse,
-                            @Context HttpHeaders headers,
-                            @PathParam("subject") String subject) {
+  public void deleteSubject(
+      final @Suspended AsyncResponse asyncResponse,
+      @Context HttpHeaders headers,
+      @ApiParam(value = "the name of the subject", required = true)
+        @PathParam("subject") String subject) {
     List<Integer> deletedVersions;
     try {
       if (!schemaRegistry.listSubjects().contains(subject)) {
